# mlmc_for_spdes

./: .gitignore  0_she_and_fourier_modes.ipynb  README.md  dean_kawasaki_nn.cpp  ellip.eps  ellip.m  euler_call.eps  euler_digital.eps  gbm_euler.py  mlmc.py  mlmc_runner.ipynb  mlmc_test.py  para.m  para.py  plot_generation.ipynb  presentation_graphics.ipynb  stoch_heat_eqn.py
data/: gbm_euler_1.csv
mlmc/: dean_kawasaki.py  dean_kawasaki_cc.py  gbm_euler.py  gbm_euler_performant.py  mlmc.py  mlmc_test.py  para.eps  para.py  stoch_heat_eqn.py  stoch_heat_eqn_debug.py  stoch_heat_eqn_fe.py  stoch_heat_eqn_fe_corr_check.py  stoch_heat_eqn_fine_coupling.py  stoch_heat_eqn_qoi.py
mlmc_cpp/: CMakeLists.txt  README.md  main.cpp  omp_hello  omp_hello.cpp
mlmc_cpp/include/: dean_kawasaki_cc.hpp  dean_kawasaki_nn.hpp  gbm_euler.hpp  mlmc.hpp  mlmc_test.hpp  stoch_heat_eqn_energy.hpp  stoch_heat_eqn_energy_cc.hpp  stoch_heat_eqn_energy_fe.hpp  stoch_heat_eqn_energy_nn.hpp  stoch_heat_eqn_fourier_modes.hpp  stoch_heat_eqn_fourier_modes_var.hpp  stoch_heat_eqn_fourier_modes_var_cc.hpp  stoch_heat_eqn_fourier_modes_var_fe.hpp  stoch_heat_eqn_qoi.hpp
mlmc_cpp/outputs/: mlmc_complexity_dk_cc.csv  mlmc_complexity_dk_nn.csv  mlmc_complexity_gbm_euler.csv  mlmc_complexity_stoch_heat_eqn.csv  mlmc_complexity_stoch_heat_eqn_energy_cc.csv  mlmc_complexity_stoch_heat_eqn_energy_fe.csv  mlmc_complexity_stoch_heat_eqn_energy_nn.csv  mlmc_complexity_stoch_heat_eqn_fourier_mode.csv  mlmc_complexity_stoch_heat_eqn_fourier_mode_var.csv  mlmc_complexity_stoch_heat_eqn_fourier_mode_var_cc.csv  mlmc_complexity_stoch_heat_eqn_fourier_mode_var_fe.csv  mlmc_convergence_dk_cc.csv  mlmc_convergence_dk_nn.csv  mlmc_convergence_gbm_euler.csv  mlmc_convergence_stoch_heat_eqn.csv  mlmc_convergence_stoch_heat_eqn_energy_cc.csv  mlmc_convergence_stoch_heat_eqn_energy_fe.csv  mlmc_convergence_stoch_heat_eqn_energy_nn.csv  mlmc_convergence_stoch_heat_eqn_fourier_mode.csv  mlmc_convergence_stoch_heat_eqn_fourier_mode_var.csv  mlmc_convergence_stoch_heat_eqn_fourier_mode_var_cc.csv  mlmc_convergence_stoch_heat_eqn_fourier_mode_var_fe.csv  mlmc_rates_dk_nn.csv  mlmc_regression_dk_cc.csv  mlmc_regression_gbm_euler.csv  mlmc_regression_stoch_heat_eqn_energy_cc.csv  mlmc_regression_stoch_heat_eqn_energy_fe.csv  mlmc_regression_stoch_heat_eqn_energy_nn.csv
mlmc_cpp/outputs_omp/: mlmc_complexity_gbm_euler.csv  mlmc_convergence_gbm_euler.csv  mlmc_regression_gbm_euler.csv
mlmc_cpp/src/: dean_kawasaki_cc.cpp  dean_kawasaki_nn copy.cpp  dean_kawasaki_nn.cpp  gbm_euler.cpp  gbm_euler_omp.cpp  mlmc.cpp  mlmc_test.cpp  stoch_heat_eqn_energy.cpp  stoch_heat_eqn_energy_cc.cpp  stoch_heat_eqn_energy_fe.cpp  stoch_heat_eqn_energy_fe_omp.cpp  stoch_heat_eqn_energy_nn.cpp  stoch_heat_eqn_fourier_modes.cpp  stoch_heat_eqn_fourier_modes_var.cpp  stoch_heat_eqn_fourier_modes_var_cc.cpp  stoch_heat_eqn_fourier_modes_var_fe.cpp  stoch_heat_eqn_qoi.cpp
notebooks/: 0_debugging.ipynb  0_she_and_fourier_modes.ipynb  1_validation_work.ipynb  2_noise_resolving.ipynb  3_validating_SHE_error.ipynb  4_np_trapz.ipynb  5_performance_tuning.ipynb  6_c++_output_testing.ipynb  7_tiling_understanding.ipynb  8_dean_kawasaki.ipynb  9_fe_coupling.ipynb  (+1 more)
report/: main.tex  (+2 more)
(+37 files in other folders)
